<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context="com.emerscience.activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/txt_img_email"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:background="@drawable/ic_usuario"
                    android:gravity="center" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/style_edittext"
                    android:hint="@string/prompt_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true" />
            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="26dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/txt_img_contrasena"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:background="@drawable/ic_contrasena"
                    android:gravity="center"
                    android:textAllCaps="false" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/edt_contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/style_edittext"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Space
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            app:layout_constraintStart_toStartOf="parent"


            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/style_button_login"
                android:onClick="loginServicio"
                android:text="@string/txt_ingresar"
                android:textColor="@color/cardview_light_background"
                android:textSize="17sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />


        </LinearLayout>

        <Space
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.872">


        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <TextView
            android:id="@+id/txt_desarrollado_por"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/string_desarrollado_por"
            android:textSize="12sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/txt_universidad_central"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/string_universidad_central"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/txt_del_ecuador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/string_del_Ecuador"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>